--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+/*Estilos personalizados*/
+.fondoTitulo {
+    opacity: 0.5;
+    background-color: #000000;
+    background: url('../imagenes/fondo.png');
+    padding: 40px 0 40px 0;
+}
