--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -42,6 +42,11 @@
                 <input asp-for="Input.Pais" class="form-control" />
                 <span asp-validation-for="Input.Pais" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
@@ -56,7 +61,7 @@
             <div class="form-group">
                 <div class="col-5">
                     <input type="radio" name="radUsuarioRole" value="@CNT.Admin" />@CNT.Admin
-                    <input type= "radio" name="radUsuarioRole" value="@CNT.Usuario" />@CNT.Usuario
+                    <input type="radio" name="radUsuarioRole" value="@CNT.Usuario" />@CNT.Usuario
                 </div>
             </div>
 
