--- a/Areas/Admin/Views/Usuarios/Index.cshtml
+++ b/Areas/Admin/Views/Usuarios/Index.cshtml
@@ -11,7 +11,7 @@
             <h2 class="text-info">Lista de usuarios</h2>
         </div>
         <div class="col-6">
-            <a asp-area="Identity" asp-page="/Account/Register/" class="btn btn-info">
+            <a href="/Identity/Account/Register" class="btn btn-info">
                 <i class="fas fa-plus"></i> &nbsp; Registrar un nuevo usuario
             </a>
         </div>
